2004-12-07  Per Bothner  <per@bothner.com>

	* PrimOps.scm: Update Symbol handling.
	(functionp): New function.

2004-08-07  Per Bothner  <per@bothner.com>

	* PrimOps.scm (apply):  applyN methods was renamed to doApply.

2003-10-12  Per Bothner  <per@bothner.com>

	* PrimOps.scm (prog1):  Define syntax definition.

2002-11-10  Per Bothner  <per@bothner.com>

	* PrimOps.scm (apply):  Add cast to <function>.

2001-06-19  Per Bothner  <per@bothner.com>

	* PrimOps.java (symbol-plist, setplist):  Comment out.
	(get, put):  New definitions using Porcdeure getProperty/putProperty.

2001-06-18  Per Bothner  <per@bothner.com>

	New package.
	* PrimOps.scm:  New file, based on code moved from gnu.jemacs.lang.
	* Makefile.am:  New file.